--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,9 @@
 /Makefile.in
 /aclocal.m4
 /autoconf-archive-*-*-*.tar.bz2
+/autoconf-archive-*-*-*.tar.gz
 /autom4te.cache/*
+/build-aux/*
 /config.log
 /config.status
 /configure
-/install-sh
-/missing
