Use dots to separate the date components in our version strings. git-version-gen is happier this way.

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@
 /Makefile
 /Makefile.in
 /aclocal.m4
-/autoconf-archive-*-*-*.tar.bz2
-/autoconf-archive-*-*-*.tar.gz
+/autoconf-archive-*.*.*.tar.gz
+/autoconf-archive-*.*.*.tar.bz2
 /autom4te.cache/*
 /build-aux/*
 /config.log
