--- a/Makefile-maint
+++ b/Makefile-maint
@@ -2,15 +2,16 @@
 
 srcdir		:= .
 m4dir		:= $(srcdir)/m4
+htmldir		:= $(srcdir)/html
 
 STAGEDIR	:= $(srcdir)/stage
 M4_FILES	:= $(wildcard $(m4dir)/*.m4)
 MACROS		:= $(patsubst $(m4dir)/%.m4,%, $(M4_FILES))
 CANON_M4_FILES	:= $(patsubst %,$(STAGEDIR)/%.m4,$(MACROS))
-MARKDOWN_FILES	:= $(patsubst %,$(STAGEDIR)/%.mdown,$(MACROS))
-HTML_FILES	:= $(patsubst %,$(STAGEDIR)/%.html,$(MACROS))
+RAW_HTML_FILES	:= $(patsubst %,$(STAGEDIR)/%.html,$(MACROS))
+HTML_FILES	:= $(patsubst %,$(htmldir)/%.html,$(MACROS))
 
-GENERATED_FILES = $(CANON_M4_FILES) $(MARKDOWN_FILES) $(HTML_FILES)
+GENERATED_FILES = $(HTML_FILES)
 CLEAN_FILES	= $(GENERATED_FILES) $(STAGEDIR)/.dirCreated $(STAGEDIR)/autoconf-archive.css
 
 .SECONDARY: $(GENERATED_FILES)
@@ -18,15 +19,12 @@ CLEAN_FILES	= $(GENERATED_FILES) $(STAGEDIR)/.dirCreated $(STAGEDIR)/autoconf-ar
 
 all: $(HTML_FILES)
 
-$(STAGEDIR)/%.m4 : $(m4dir)/%.m4 $(STAGEDIR)/.dirCreated $(srcdir)/macro.py $(srcdir)/canon.st
-	@$(srcdir)/macro.py --template-lexer=angle-bracket --input-encoding=latin1 --output-encoding=latin1 --output-dir=$(STAGEDIR) --output-suffix=.m4 $(srcdir)/canon.st $<
-	@diff -ub $@ $< || (rm $@; exit 1)
+$(STAGEDIR)/%.html : $(m4dir)/%.m4 $(STAGEDIR)/.dirCreated $(srcdir)/macro.py $(srcdir)/macro2html.py
+	@$(srcdir)/macro2html.py --input-encoding=latin-1 --output-encoding=latin-1 --output-dir=$(STAGEDIR) --output-suffix=.html $<
 
-$(STAGEDIR)/%.mdown : $(STAGEDIR)/%.m4 $(srcdir)/macro.py $(srcdir)/markdown.st
-	@$(srcdir)/macro.py --template-lexer=angle-bracket --input-encoding=latin1 --output-encoding=latin1 --output-dir=$(STAGEDIR) --output-suffix=.mdown $(srcdir)/markdown.st $<
-
-$(STAGEDIR)/%.html : $(STAGEDIR)/%.mdown $(STAGEDIR)/autoconf-archive.css $(srcdir)/header.html
-	@pandoc --standalone --title-prefix='Autoconf Macro: ' --include-before-body=$(srcdir)/header.html --css=autoconf-archive.css --from=markdown --to=html -o $@ $<
+$(htmldir)/%.html : $(STAGEDIR)/%.html
+	@echo publish $*
+	@tidy -quiet -ascii --indent yes --indent-spaces 1 --tidy-mark no -wrap 80 --hide-comments yes $< >$@
 
 $(STAGEDIR)/autoconf-archive.css : $(srcdir)/autoconf-archive.css $(STAGEDIR)/.dirCreated
 	@cp -v $< $@
