--- a/Makefile-maint
+++ b/Makefile-maint
@@ -3,35 +3,55 @@
 srcdir		:= .
 m4dir		:= $(srcdir)/m4
 htmldir		:= $(srcdir)/html
+stagedir	:= $(srcdir)/stage
+buildauxdir	:= $(srcdir)/build-aux
 
-STAGEDIR	:= $(srcdir)/stage
 M4_FILES	:= $(wildcard $(m4dir)/*.m4)
 MACROS		:= $(patsubst $(m4dir)/%.m4,%, $(M4_FILES))
-CANON_M4_FILES	:= $(patsubst %,$(STAGEDIR)/%.m4,$(MACROS))
-RAW_HTML_FILES	:= $(patsubst %,$(STAGEDIR)/%.html,$(MACROS))
+CANON_M4_FILES	:= $(patsubst %,$(stagedir)/%.m4,$(MACROS))
+RAW_HTML_FILES	:= $(patsubst %,$(stagedir)/%.html,$(MACROS))
 HTML_FILES	:= $(patsubst %,$(htmldir)/%.html,$(MACROS))
 
-GENERATED_FILES = $(HTML_FILES)
-CLEAN_FILES	= $(GENERATED_FILES) $(STAGEDIR)/.dirCreated $(STAGEDIR)/autoconf-archive.css
+GENERATED_FILES = $(HTML_FILES) $(stagedir)/.dirCreated AUTHORS ChangeLog
+CLEAN_FILES	= $(GENERATED_FILES)
 
 .SECONDARY: $(GENERATED_FILES)
-.PHONY: all clean
+.PHONY: all clean update-gnulib autoreconf configure bootstrap
 
 all: $(HTML_FILES)
 
-$(STAGEDIR)/%.html : $(m4dir)/%.m4 $(STAGEDIR)/.dirCreated $(srcdir)/macro.py $(srcdir)/macro2html.py
-	@$(srcdir)/macro2html.py --input-encoding=latin-1 --output-encoding=latin-1 --output-dir=$(STAGEDIR) --output-suffix=.html $<
+$(stagedir)/%.html : $(m4dir)/%.m4 $(stagedir)/.dirCreated macro.py macro2html.py
+	@macro2html.py --input-encoding=latin-1 --output-encoding=latin-1 --output-dir=$(stagedir) --output-suffix=.html $<
 
-$(htmldir)/%.html : $(STAGEDIR)/%.html
+$(htmldir)/%.html : $(stagedir)/%.html
 	@echo publish $*
 	@tidy -quiet -ascii --indent yes --indent-spaces 1 --tidy-mark no -wrap 80 --hide-comments yes $< >$@
-
-$(STAGEDIR)/autoconf-archive.css : $(srcdir)/autoconf-archive.css $(STAGEDIR)/.dirCreated
-	@cp -v $< $@
 
 %/.dirCreated:
 	@install -D /dev/null $@
 
 clean:
 	@rm -f $(CLEAN_FILES)
-	@if [ -d "$(STAGEDIR)" ] ; then rmdir "$(STAGEDIR)"; fi
+	@if [ -d "$(stagedir)" ] ; then rmdir "$(stagedir)"; fi
+	@rm -rf $(buildauxdir)
+
+update-gnulib:
+	gnulib-tool --m4-base build-aux --source-base build-aux --import git-version-gen gitlog-to-changelog gnupload
+
+autoreconf:
+	autoreconf --install -Wall
+
+AUTHORS:
+	echo >$@ todo
+
+ChangeLog:
+	cd $(m4dir) && ../build-aux/gitlog-to-changelog -- master >../$@
+
+configure:
+	./configure
+
+bootstrap:
+	$(MAKE) -f Makefile-maint update-gnulib
+	$(MAKE) -f Makefile-maint AUTHORS ChangeLog
+	$(MAKE) -f Makefile-maint autoreconf
+	$(MAKE) -f Makefile-maint configure
