maint: use maintainer-makefile module from gnulib
Gnulib is now registered as a submodule. Please run "git submodule init"
to update your checked-out copy.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
+# autoconf-archive/.gitmodules
+
 [submodule "m4"]
 	path = m4
 	url = ssh://git.sv.gnu.org/srv/git/autoconf-archive.git
+
+[submodule "gnulib"]
+	path = gnulib
+	url = git://git.savannah.gnu.org/gnulib.git
