--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,9 @@
-# Install the Autoconf Archive
+# Build and install the Autoconf Archive.
 #
 # Copyright (c) 2009 by Peter Simons <simons@cryp.to>
 # Licensed under the terms of the GNU General Public License.
 
 dist_pkgdata_DATA       = AUTHORS COPYING README
-CLEANFILES              = $(DIST_ARCHIVES)
-MAINTAINERCLEANFILES    = missing install-sh configure Makefile.in aclocal.m4
 
 aclocaldir              = $(datadir)/aclocal
 dist_aclocal_DATA       = $(M4SOURCE)
@@ -15,5 +13,17 @@ dist_html_DATA          = $(HTMLFILE)
 
 EXTRA_DIST		= build-aux/git-version-gen
 
+# maintainer rules
+
 dist-hook:
 	echo $(VERSION) > $(distdir)/.tarball-version
+
+clean-local:
+	@rm -rf $(srcdir)/stage $(srcdir)/macro.pyc
+	@rm -f $(DIST_ARCHIVES)
+
+maintainer-clean-local:
+	@rm -rf $(srcdir)/build-aux
+	@rm -f configure Makefile.in aclocal.m4 AUTHORS ChangeLog
+	@rm -f INSTALL config.log config.status configure maint.mk
+	@rm -f autoconf-archive-*.*.*.tar.* GNUmakefile
