--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,12 @@
 /Makefile.in
 /aclocal.m4
 /autoconf-archive-*.*.*.tar.*
+/autoconf-archive.info
+/autoconf-archive.info-?
 /autom4te.cache/*
 /build-aux/*
 /config.log
 /config.status
 /configure
-/maint.mk
 /gnulib
+/maint.mk
