Integrated Texinfo documentation into the Automake build.

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,11 @@ dist_aclocal_DATA       = $(M4SOURCE)
 htmldir                 = $(pkgdatadir)/html
 dist_html_DATA          = $(HTMLFILE)
 
-EXTRA_DIST		= build-aux/git-version-gen
+info_TEXINFOS		= autoconf-archive.texi
+
+EXTRA_DIST		= build-aux/git-version-gen $(TEXIFILE)
+
+autoconf-archive.info: $(TEXIFILE)
 
 # maintainer rules
 
