configure.ac: brought copyright line in sync with the one in the texinfo documentation
Eventually, the copyright will be transferred to the FSF.

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([-Wall gnu dist-bzip2 dist-xz])
 AC_CONFIG_SRCDIR([autoconf-archive.texi])
 AC_COPYRIGHT([dnl
-Compilation Copyright 2009 by Peter Simons <simons@cryp.to>
+Compilation Copyright 2001-2009 by Peter Simons <simons@cryp.to>
 
 This compilation is free software: you can redistribute it and/or
 modify it under the terms of the GNU General Public License as
