--- a/Makefile.am
+++ b/Makefile.am
@@ -30,4 +30,4 @@ maintainer-clean-local:
 	@rm -rf $(srcdir)/build-aux
 	@rm -f configure Makefile.in aclocal.m4 AUTHORS ChangeLog
 	@rm -f INSTALL config.log config.status configure maint.mk
-	@rm -f autoconf-archive-*.*.*.tar.* GNUmakefile
+	@rm -f autoconf-archive-*.*.*.tar.* GNUmakefile COPYING
