AUTHORS: integrated git-authors-gen.pl into the build process

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,4 +33,7 @@ dist-hook:
 	    >$(distdir)/cl-t -- master $(top_srcdir)/m4;		\
 	  rm -f $(distdir)/ChangeLog;					\
 	  mv $(distdir)/cl-t $(distdir)/ChangeLog;			\
+	  $(top_srcdir)/git-authors-gen.pl >$(distdir)/au-t;		\
+	  rm -f $(distdir)/AUTHORS;					\
+	  mv $(distdir)/au-t $(distdir)/AUTHORS;			\
 	fi
