--- a/Makefile.am
+++ b/Makefile.am
@@ -3,15 +3,12 @@
 # Copyright (c) 2009 by Peter Simons <simons@cryp.to>
 # Licensed under the terms of the GNU General Public License.
 
+SUBDIRS                 = doc
+
 dist_pkgdata_DATA       = AUTHORS COPYING README
 aclocaldir              = $(datadir)/aclocal
 dist_aclocal_DATA       = $(M4SOURCE)
-info_TEXINFOS           = autoconf-archive.texi
-MAKEINFOFLAGS		= -I $(srcdir)/doc
-am__TEXINFO_TEX_DIR     = $(srcdir)/build-aux$(PATH_SEPARATOR)$(srcdir)/doc
-EXTRA_DIST              = build-aux/git-version-gen build-aux/gitlog-to-changelog $(TEXIFILE)
-
-autoconf-archive.info:  $(TEXIFILE)
+EXTRA_DIST              = build-aux/git-version-gen build-aux/gitlog-to-changelog
 
 # maintainer rules
 
@@ -21,7 +18,6 @@ clean-local:
 
 maintainer-clean-local:
 	@rm -rf $(srcdir)/build-aux
-	@rm -rf doc
 	@rm -f configure Makefile.in aclocal.m4 AUTHORS ChangeLog
 	@rm -f INSTALL config.log config.status configure maint.mk
 	@rm -f autoconf-archive-*.*.*.tar.* GNUmakefile
