--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,6 +1,6 @@
 # Build and install the Autoconf Archive Documentation.
 #
-# Copyright (c) 2009 by Peter Simons <simons@cryp.to>
+# Copyright (c) 2009 by by the Autoconf Archive Maintainers
 # Licensed under the terms of the GNU General Public License.
 
 info_TEXINFOS           = autoconf-archive.texi
