bootstrap.sh, cfg.mk: enabled gnulib's gendocs module
The make target 'web-manual' generates project documentation suitable
for uploading to the web in the directory doc/manual/*.

--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -3,8 +3,19 @@
 /Makefile
 /Makefile.in
 /all-macros.texi
+/autoconf-archive.aux
+/autoconf-archive.cp
+/autoconf-archive.fn
 /autoconf-archive.info
 /autoconf-archive.info-?
+/autoconf-archive.ky
+/autoconf-archive.log
+/autoconf-archive.pg
+/autoconf-archive.toc
+/autoconf-archive.tp
+/autoconf-archive.vr
 /ax_*.texi
+/gendocs_template
+/manual/*
 /stamp-vti
 /version.texi
