doc/Makefile.am: ensure that all texi files are included in the distribution tarball

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -4,7 +4,6 @@
 # Licensed under the terms of the GNU General Public License.
 
 info_TEXINFOS           = autoconf-archive.texi
-am__TEXINFO_TEX_DIR     = $(srcdir)/build-aux$(PATH_SEPARATOR)$(srcdir)/doc
-EXTRA_DIST              = build-aux/git-version-gen build-aux/gitlog-to-changelog $(TEXIFILE)
+EXTRA_DIST              = $(TEXIFILE)
 
 autoconf-archive.info:  $(TEXIFILE)
