reorganizing documentation in prep for more prose
On the source side, this splits the documentation into multiple .texi
files and auto-generates the @menu for all-macros.texi, sparing a
redundant edit every time a macro is added or removed.

This also reorganizes the node structure somewhat, using numbered nodes
for everything but the macros, and organizing the macros as sections in
their own chapter, rather than full-fledged chapters.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -3,7 +3,8 @@
 # Copyright (c) 2010 by the Autoconf Archive Maintainers
 # Licensed under the terms of the GNU General Public License.
 
+CHAPTERS				= using.texi contribute.texi introduction.texi
 info_TEXINFOS           = autoconf-archive.texi
-EXTRA_DIST              = $(TEXIFILES) all-macros.texi
+EXTRA_DIST              = $(TEXIFILES) $(CHAPTERS) all-macros.texi
 
-autoconf-archive.info:  autoconf-archive.texi all-macros.texi $(TEXIFILES)
+autoconf-archive.info:  autoconf-archive.texi all-macros.texi $(TEXIFILES) $(CHAPTERS)
