Updated documentation and infrastructure files to accommodate for the fact that the Autoconf Archive is now an official GNU project.
The main home page now resides at http://www.gnu.org/software/autoconf-archive/.
The mailing lists have moved from nongnu.org to corresponding gnu.org addresses.
All files have a proper copyright statement, even AUTHORS, ChangeLog, etc.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,18 @@
-# Build and install the Autoconf Archive.
+# Build and install the GNU Autoconf Archive.
 #
-# Copyright (c) 2010 by the Autoconf Archive Maintainers
-# Licensed under the terms of the GNU General Public License.
+# Copyright (c) 2010 Free Software Foundation, Inc.
+#
+# This program is free software: you can redistribute it and/or modify it under
+# the terms of the GNU General Public License as published by the Free Software
+# Foundation, either version 3 of the License, or (at your option) any later
+# version.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along with
+# this program. If not, see <http://www.gnu.org/licenses/>.
 
 SUBDIRS                 = doc
 
@@ -9,8 +20,6 @@ dist_pkgdata_DATA       = AUTHORS COPYING README
 aclocaldir              = $(datadir)/aclocal
 dist_aclocal_DATA       = $(M4FILES)
 EXTRA_DIST              = build-aux/git-version-gen build-aux/gitlog-to-changelog
-
-# maintainer rules
 
 clean-local:
 	@rm -rf $(srcdir)/stage $(srcdir)/macro.pyc
@@ -24,12 +33,17 @@ maintainer-clean-local:
 
 dist-hook:
 	echo $(VERSION) > $(distdir)/.tarball-version
-	if test -d .git; then						\
-	  $(top_srcdir)/build-aux/gitlog-to-changelog			\
-	    >$(distdir)/cl-t -- master $(top_srcdir)/m4;		\
-	  rm -f $(distdir)/ChangeLog;					\
-	  mv $(distdir)/cl-t $(distdir)/ChangeLog;			\
-	  $(top_srcdir)/gen-authors.sh >$(distdir)/au-t;		\
-	  rm -f $(distdir)/AUTHORS;					\
-	  mv $(distdir)/au-t $(distdir)/AUTHORS;			\
+	if test -d .git; then												\
+	  echo > $(distdir)/cl-t '# Copyright (c) 2010 Free Software Foundation, Inc.';					\
+	  echo >>$(distdir)/cl-t '#';											\
+	  echo >>$(distdir)/cl-t '# Copying and distribution of this file, with or without modification, are';		\
+	  echo >>$(distdir)/cl-t '# permitted in any medium without royalty provided the copyright notice and';		\
+	  echo >>$(distdir)/cl-t '# this notice are preserved. This file is offered as-is, without any warranty.';	\
+	  echo >>$(distdir)/cl-t '';											\
+	  $(top_srcdir)/build-aux/gitlog-to-changelog >>$(distdir)/cl-t -- master $(top_srcdir)/m4;			\
+	  rm -f $(distdir)/ChangeLog;											\
+	  mv $(distdir)/cl-t $(distdir)/ChangeLog;									\
+	  $(top_srcdir)/gen-authors.sh >$(distdir)/au-t;								\
+	  rm -f $(distdir)/AUTHORS;											\
+	  mv $(distdir)/au-t $(distdir)/AUTHORS;									\
 	fi
