.gitignore: ignore the __pycache__ directory that's created by python 3.x

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /stage/*
 
 # byte-compiled version of the python module
+/__pycache__/*
 /macro.pyc
 
 # the html tree is maintained in a separate, CVS-based repository
