Disable tar.gz and tar.bz2 release archives.
The tarballs compressed with xz and lzip are quite a bit smaller and
those utilities are sufficiently common to be suitable to replace the
old formats.

Also, document the github mirror in the README and NEWS file.

--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,7 @@ AC_INIT([GNU Autoconf Archive], m4_esyscmd([build-aux/git-version-gen .tarball-v
 	[autoconf-archive-maintainers@gnu.org], [autoconf-archive],
 	[http://www.gnu.org/software/autoconf-archive/])
 AC_CONFIG_AUX_DIR([build-aux])
-AM_INIT_AUTOMAKE([1.11 -Wall gnu dist-bzip2 dist-xz dist-lzip])
+AM_INIT_AUTOMAKE([1.11 -Wall gnu no-dist-gzip dist-xz dist-lzip])
 AC_PREREQ([2.65])
 AC_CONFIG_SRCDIR([doc/autoconf-archive.texi])
 AC_MSG_NOTICE([$PACKAGE_STRING])
