tell gnulib-tool to avoid the dummy module to try to avoid the need for a C compiler
and remove the manual call to AC_PROG_CC in configure.ac (gl_EARLY
still seems to call it, though...)

Also enable maintainer mode, and some other things to get the bootstrap
script to work on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: c
 git:
   depth: 50000
-install: sudo apt-get install --allow-unauthenticated -qq gnulib lzip texlive tidy
+install: sudo apt-get install --allow-unauthenticated -qq gnulib lzip texlive tidy bash
 script: ./bootstrap.sh && ./configure && make -j4 maintainer-all all && make distcheck && make web-manual && ./fix-website.sh
