--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,7 @@ dnl implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 AC_INIT([GNU Autoconf Archive],[m4_esyscmd(build-aux/git-version-gen .tarball-version)],[autoconf-archive-maintainers@gnu.org],[autoconf-archive],[http://www.gnu.org/software/autoconf-archive/])
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([1.11 -Wall gnu no-dist-gzip dist-xz dist-lzip])
+AC_REQUIRE_AUX_FILE([mdate-sh])
 AM_MAINTAINER_MODE
 AC_PREREQ([2.68])
 AC_CONFIG_SRCDIR([doc/autoconf-archive.texi])
