cfg.mk needs a hack for VPATH builds

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -25,7 +25,7 @@ autoconf_archive_TEXINFOS = all-macros.texi version.texi
 
 autoconf-archive.info: autoconf-archive.texi all-macros.texi $(TEXIFILES) $(CHAPTERS) version.texi
 ##FIXME: this rule for rebuilding all-macros.texi is kind of a hack:
-all-macros.texi: @MAINT@ ../cfg.mk
+all-macros.texi: @MAINT@ $(top_srcdir)/cfg.mk
 	$(am__cd) .. && make maintainer-all
 
 autoconf-archive.texi: version.texi
