clean up a little of the mess that autoupdate left behind
there is still plenty more remaining to clean up though
also bump up various serial numbers
and replace instances of configure.in with configure.ac
and misc. other edits noticed while doing the aforementioned cleanup

(I fully expect this build to fail btw)

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,7 +28,7 @@ clean-local:
 	@rm -rf $(srcdir)/stage $(srcdir)/macro.pyc
 	@rm -f $(DIST_ARCHIVES)
 
-MAINTAINERCLEANFILES = *~ ./.*~ doc/*~
+MAINTAINERCLEANFILES = *~ ./.*~ doc/*~ m4/*~
 
 ## duplicates in here should be harmless, but weed them out anyways:
 maintainer-clean-local:
