--- a/test/configure.ac.in
+++ b/test/configure.ac.in
@@ -6,7 +6,11 @@ AC_PREREQ([2.68])dnl
 AC_INIT([@PACKAGE_NAME@ testsuite],[@PACKAGE_VERSION@],
         [@PACKAGE_BUGREPORT@])dnl
 
+set -e
+
 AC_CONFIG_SRCDIR([atlocal])
+
+export CFLAGS="-Wall -Wextra -Wundef -Wimplicit -Wc++-compat -Wstrict-prototypes -Wold-style-definition -Werror"
 
 dnl# this file just exists to include all the macros:
 m4_include([acinclude.m4])dnl
