--- a/Makefile.am
+++ b/Makefile.am
@@ -29,7 +29,7 @@ maintainer-clean-local:
 	@rm -rf $(srcdir)/build-aux
 	@rm -f configure Makefile.in aclocal.m4 AUTHORS ChangeLog
 	@rm -f INSTALL config.log config.status configure maint.mk
-	@rm -f autoconf-archive-*.*.*.tar.* GNUmakefile
+	@rm -f autoconf-archive-*.*.*.tar.* GNUmakefile README
 
 dist-hook:
 	echo $(VERSION) > $(distdir)/.tarball-version
