--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
+# .travis.yml
+
 language: c
+
 git:
   depth: 50000
-install: sudo apt-get install --allow-unauthenticated -qq gnulib lzip texlive tidy python3
-script: ./bootstrap.sh && ./configure && make PYTHON=python3 -j4 maintainer-all all && make distcheck && make web-manual && ./fix-website.sh
+
+install:
+  - travis_retry sudo apt-get update
+  - travis_retry sudo apt-get install --allow-unauthenticated -qq gnulib lzip texlive tidy python3
+
+script:
+  - ./bootstrap.sh
+  - ./configure
+  - make PYTHON=python3 -j4 maintainer-all all
+  - make distcheck
+  - make web-manual && ./fix-website.sh
