--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ git:
   depth: 50000
 
 install:
+  - travis_retry sudo apt-key update
   - travis_retry sudo apt-get update
-  - travis_retry sudo apt-get install --allow-unauthenticated -qq gnulib lzip texlive tidy python3
+  - travis_retry sudo apt-get install -qq gnulib lzip texlive tidy python3
 
 script:
   - ./bootstrap.sh
